# nrf52-unifying

./: .gitignore  .gitmodules  Cargo.toml  README.md
app/: Cargo.toml  build.rs  memory.x
app/src/: esb_radio.rs  keymap.rs  main.rs  storage.rs  unifying_hal.rs
bootloader/: Cargo.toml  build.rs  memory.x
bootloader/src/: main.rs
docs/: MIGRATION.md  TECHNICAL.md  USAGE.md
src/: main.rs
tools/: cdc_dfu.ps1  cdc_dfu.py  unifying.py
