[package]
name = "nrf-demo-app"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-boot = "0.7.0"
embassy-boot-nrf = "0.11.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-futures = "0.1.2"
embassy-nrf = { version = "0.10.0", features = ["nrf52840", "gpiote", "time-driver-rtc1", "unstable-pac", "time"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embassy-usb = "0.6.0"
panic-reset = "0.1.1"
rust-unifying = { path = "../rust-unifying/rust-unifying", default-features = false }
aes = { version = "0.8", default-features = false }
ctr = { version = "0.9", default-features = false }
heapless = { version = "0.8", default-features = false }
embedded-storage = "0.3"
